@@ -7,6 +7,8 @@ New features
 - Basic support for guitar chords: major and minor, augmented and diminished,
   sevens (with forementioned only) and suspended (2nd and 4th).
 
+- Meters 2/2 and 4/4 are replaced with traditional C symbols.
+
 Bugs fixed
 ----------
 
